--- a/styles/style.css
+++ b/styles/style.css
@@ -197,6 +197,7 @@ add-ph-icon{
     border-radius:50% ;
     padding: 5px 8px;
     font-size: 1.5rem;
-
-
+}
+.faisal{
+    padding-right: 250px;
 }
