--- a/styles/utility.css
+++ b/styles/utility.css
@@ -161,6 +161,18 @@
 .mt-5{
     margin-top: 40px;
 }
+.mt-6{
+    margin-top: 50px;
+}
+.mt-7{
+    margin-top: 60px;
+}
+.mt-8{
+    margin-top: 70px;
+}
+.mt-9{
+    margin-top: 80px;
+}
 .m-auto{
     margin: 0 auto;
 }
@@ -200,4 +212,9 @@
 .pos-start{
     position:absolute;
     
+}
+.snp-pop{
+    font-family: Poppins;
+    font-weight: 500;
+    font-size: 2.5rem;
 }
