--- a/styles/style.css
+++ b/styles/style.css
@@ -1,293 +1,367 @@
 @font-face {
-    font-family: Poppins;
-    src: url(../assets/fonts/Poppins/Poppins-Regular.ttf);
+  font-family: Poppins;
+  src: url(../assets/fonts/Poppins/Poppins-Regular.ttf);
 }
 @font-face {
-    font-family: futurak;
-    src: url(../assets/fonts/Futura\ Black\ BT.ttf);
+  font-family: futurak;
+  src: url(../assets/fonts/Futura\ Black\ BT.ttf);
 }
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.logo{
-    width: 165px;
+.logo {
+  width: 165px;
 }
-.main-poster{
-    width: 1520px;
+.main-poster {
+  width: 100%;
 }
-.nav-bar{
-    padding: 10px 120px;
-
+.nav-bar {
+  padding: 10px 120px;
 }
-.nav-items{ 
-    text-decoration: none;
-    color:white;
-    font-family: Poppins;
-    font-size: 1.5rem;
+.nav-items {
+  text-decoration: none;
+  color: white;
+  font-family: Poppins;
+  font-size: 1.5rem;
 }
-.nav-buttons{
-    font: Poppins;
-    width: 145px;
-    height: 50px;
-    border-radius: 30px;
-    color: #ffffff;
-    cursor: pointer;
-    font-size: 1.4rem;
-    border: 1px solid #ff0000;
-    
+.nav-buttons {
+  font: Poppins;
+  width: 145px;
+  height: 50px;
+  border-radius: 30px;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 1.4rem;
+  border: 1px solid #ff0000;
 }
-#franchise-button{
-    background-color: transparent;
-    border: 1px solid white;
-    border-radius: 30px;
+#franchise-button {
+  background-color: transparent;
+  border: 1px solid white;
+  border-radius: 30px;
 }
-#order-button{
-    width: 150px;
+#order-button {
+  width: 150px;
 }
-#arrow{
-    color: red;
-    background-color: #ffffff;
-    border-radius:50% ;
-    padding: 5px 8px;
-    font-size: 1.5rem;
-    
+#arrow {
+  color: red;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 1.5rem;
 }
-.big-font{
-    font-family: Poppins;
-    font-weight: 390;
-    font-size: 3.4rem;
-    padding-top: 50px;
-    
+.big-font {
+  font-family: Poppins;
+  font-weight: 390;
+  font-size: 3.4rem;
+  padding-top: 50px;
 }
-.bn-text{
-    font-family: futurak;
-    font-size: 5rem;
-
+.bn-text {
+  font-family: futurak;
+  font-size: 5rem;
 }
-.small-font{
-    font-family: Poppins;
-    font-size: 1.5rem;
+.small-font {
+  font-family: Poppins;
+  font-size: 1.5rem;
 }
-.main-images{
-    width: 250px;
-    padding: 30px 20px 20px ;
-    margin-top: 40px;
-    border-radius: 3px;
-    margin-left: 20px;
+.main-images {
+  width: 250px;
+  padding: 30px 20px 20px;
+  margin-top: 40px;
+  border-radius: 3px;
+  margin-left: 20px;
 }
-.main-button{
-    font: Poppins;
-    font-weight: 25px;
-    height: 50px;
-    border-radius: 30px;
-    color: #ffffff;
-    background-color: black;
-    cursor: pointer;
-    font-size: 1.4rem;
-    border: 0.2px solid #3e3e3e;
-    width: 174px;
-    margin: 28px 38px 80px 38px;
-    text-align: center;
+.main-button {
+  font: Poppins;
+  font-weight: 25px;
+  height: 50px;
+  border-radius: 30px;
+  color: #ffffff;
+  background-color: black;
+  cursor: pointer;
+  font-size: 1.4rem;
+  border: 0.2px solid #3e3e3e;
+  width: 174px;
+  margin: 28px 38px 80px 38px;
+  text-align: center;
 }
-.bg-text{
-    font-family: futurak;
-    color: #1b1b1b;
-    font-size: 30rem;
+.bg-text {
+  font-family: futurak;
+  color: #1b1b1b;
+  font-size: 30rem;
 }
-.resfran{
-    font-size: 5rem;
+.resfran {
+  font-size: 5rem;
 }
-.city-name{
-    letter-spacing: 10px;
-    font-family: Poppins;
-    font-weight: 250;
-    font-size: 1.6rem;
-    padding-bottom:0px;
-
+.city-name {
+  letter-spacing: 10px;
+  font-family: Poppins;
+  font-weight: 250;
+  font-size: 1.6rem;
+  padding-bottom: 0px;
 }
-.sbn{
-    padding-top:0px ;
-    font-size: 3.4rem;
-
+.sbn {
+  padding-top: 0px;
+  font-size: 3.4rem;
 }
-.rest{
-    font-family: Poppins;
-    font-size: 3.4rem;
-    font-weight: 380;
+.rest {
+  font-family: Poppins;
+  font-size: 3.4rem;
+  font-weight: 380;
 }
-.add-ph{
-    font-family: Poppins;
-    font-size: 1.5rem;
+.add-ph {
+  font-family: Poppins;
+  font-size: 1.5rem;
 }
-.firstcont{
-    padding-left: 10px;
-    padding-right: 10px;
+.firstcont {
+  padding-left: 10px;
+  padding-right: 10px;
 }
-add-ph-icon{
-    font-size: 2rem;
-    color:  #3e3e3e;
+add-ph-icon {
+  font-size: 2rem;
+  color: #3e3e3e;
 }
-.fif-contimg{
-    width: 650px;
+.fif-contimg {
+  width: 650px;
 }
-.fif-cont{
-    height: 1500px;
+.fif-cont {
+  height: 1500px;
 }
-.six-cont{
-    height:1500px;
-    
+.six-cont {
+  height: 1500px;
 }
-.bg-img{
-    padding: 50px 0px 50px 50px;
-    height: 1900px;
-    width: 1500px;
-    position: absolute;
+.bg-img {
+  padding: 50px 0px 50px 50px;
+  height: 1900px;
+  width: 1500px;
+  position: absolute;
 }
-.bg-img2{
-    position: absolute;
-    left: 1160px;
-
+.bg-img2 {
+  position: absolute;
+  left: 1160px;
 }
-.six-contimg{
+.six-contimg {
   width: 400px;
   margin-bottom: 10px;
   padding-top: 40px;
-  border-radius: 0
+  border-radius: 0;
 }
-#six-conttext{
-    font-size: 0.1rem;
+#six-conttext {
+  font-size: 0.1rem;
 }
-.snpef-city{
-    color: #ff0000;
-    font-family: Poppins;
-    font-size: 1.2rem;
-    font-weight: 400;
-    letter-spacing: 7px;
+.snpef-city {
+  color: #ff0000;
+  font-family: Poppins;
+  font-size: 1.2rem;
+  font-weight: 400;
+  letter-spacing: 7px;
 }
-.snpef-bn{
-    font-size: 2.3rem;
+.snpef-bn {
+  font-size: 2.3rem;
 }
-.snpef-ap{
-    font-size: 1.3rem;
+.snpef-ap {
+  font-size: 1.3rem;
 }
-.snpef-btn{
-    width: 2000px;
+.snpef-btn {
+  width: 2000px;
 }
 
-#getdir-btn{
-    width: 180px;
+#getdir-btn {
+  width: 180px;
+  font: Poppins;
+  height: 50px;
+  border-radius: 30px;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 1.4rem;
+  border: 1px solid #3e3e3e;
+}
+.dir-arr {
+  color: red;
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 1.5rem;
+}
+.faisal {
+  padding-right: 250px;
+}
+.seventh-cont {
+  margin-top: 410px;
+  width: 1520px;
+  height: 655px;
+}
+.seventh-contimg {
+  width: 800px;
+  height: 400px;
+}
+.seventh-contbtn {
+  background-color: #ffffff;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 1.5rem;
+}
+.eight-cont {
+  height: 1230px;
+}
+.eight-contbox {
+  width: 420px;
+  height: 230px;
+  border-radius: 5px;
+  background-color: white;
+}
+.os-text {
+  font-size: 2.5rem;
+  font-family: Poppins;
+  font-weight: 500;
+}
+.os-box {
+  font-family: Poppins;
+  letter-spacing: 5px;
+}
+.exp-box {
+  font-weight: 2;
+}
+.s-feed {
+  color: #212529;
+  padding-top: 80px;
+  font-size: 3.4rem;
+}
+.last-img {
+  width: 285px;
+  height: 280px;
+}
+.foot {
+  margin-top: 90px;
+  height: 630px;
+}
+.sblack {
+  padding-top: 150px;
+  padding-left: 30px;
+  position: absolute;
+  height: 630px;
+  width: 380px;
+}
+.snp-bnimg {
+  width: 140px;
+}
+.foot-text {
+  font-size: 1.5rem;
+  font-family: Poppins;
+}
+.foot-box {
+  padding-top: 80px;
+}
+.foot-head {
+  font-family: Poppins;
+  font-size: 1.6rem;
+  color: white;
+  font-weight: 500;
+}
+.s-icon {
+  color: white;
+  background-color: red;
+  border-radius: 50%;
+  padding: 11px 14px;
+  font-size: 1.5rem;
+  margin: 4px;
+}
+.name {
+  height: 50px;
+  padding-top: 10px;
+}
+/* home page css end */
+
+/* about page css start */
+
+.about-nav {
+  border-bottom: 0.1px solid #303030;
+}
+.intro-head {
+  font-size: 4.1rem;
+}
+.ab1-img {
+  width: 640px;
+  height: 390px;
+  border-radius: 4px;
+}
+.ab2-img {
+  width: 700px;
+  height: 380px;
+  border-radius: 4px;
+}
+.ab3-img {
+  width: 650px;
+  height: 300px;
+  border-radius: 4px;
+}
+.ab5-img {
+  width: 660px;
+  height: 300px;
+  border-radius: 4px;
+}
+.ab6-img {
+  width: 660px;
+  height: 400px;
+  border-radius: 4px;
+}
+.ab-boxes {
+  background-color: #0f0f0f;
+  height: 450px;
+  width: 440px;
+  border-radius: 10px;
+}
+.box-img {
+  padding: 15px 50px;
+  width: 430px;
+}
+.box2-img {
+  padding: 15px;
+  padding-right: 20px;
+  width: 450px;
+}
+.ab-gujra {
+  color: #202428;
+  font-family: Poppins;
+  font-size: 1.4rem;
+}
+.ab12-img {
+  width: 650px;
+  height: 380px;
+}
+/* about us page css end */
+
+/* publication page css starts */
+
+.pub-box {
+  width: 620px;
+  height: 670px;
+  border: 1px solid #3e3e3e;
+}
+.pbox-img {
+  width: 640px;
+  height: 670px;
+  padding-top: 30px;
+}
+.type{
+    width: 650px;
+    height: 45px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+.submit-btn{
     font: Poppins;
-    height: 50px;
+    width: 180px;
+    height: 55px;
     border-radius: 30px;
     color: #ffffff;
     cursor: pointer;
     font-size: 1.4rem;
-    border: 1px solid  #3e3e3e;
+    border: 1px solid #ffb700;
+    background-color: #ffb700;
 
-}
-.dir-arr{
-     color: red;
-    background-color: #ffffff;
-    border-radius:50% ;
-    padding: 5px 8px;
-    font-size: 1.5rem;
-}
-.faisal{
-    padding-right: 250px;
-}
-.seventh-cont{
-      margin-top: 410px;
-      width: 1520px;
-      height: 655px;
-}
-.seventh-contimg{
-    width: 800px;
-    height: 400px;
-}
-.seventh-contbtn{
-    
-    background-color: #ffffff;
-    border-radius:50% ;
-    padding: 5px 8px;
-    font-size: 1.5rem;
-
-}
-.eight-cont{
-    height: 1230px;
-}
-.eight-contbox{
-    width: 420px;
-    height: 230px;
-    border-radius: 5px;
-    background-color: white;
-}
-.os-text{
-    font-size: 2.5rem;
-    font-family:Poppins;
-    font-weight: 500;
-}
-.os-box{
-    font-family: Poppins;
-    letter-spacing: 5px;
-    
-}
-.exp-box{
-    font-weight: 2;
-}
-.s-feed{
-    color:#212529 ;
-    padding-top: 80px;
-    font-size: 3.4rem;
-}
-.last-img{
-    width: 285px;
-    height: 280px;
-
-}
-.foot{
-  height: 630px;  
-}
-.sblack{
-    padding-top: 150px;
-    padding-left: 30px;
-    position: absolute;
-    height: 630px;
-    width: 380px;
-}
-.snp-bnimg{
-    width: 140px;
-
-}
-.foot-text{
-    font-size: 1.5rem;
-    font-family: Poppins;
-}
-.foot-box{
-    padding-top: 80px;
-    
-}
-.foot-head{
-    font-family: Poppins;
-    font-size: 1.6rem;
-    color: white;
-    font-weight: 500;
-
-}
-.s-icon{
-    color:white;
-    background-color: red;
-    border-radius:50% ;
-    padding: 11px 14px;
-    font-size: 1.5rem;
-    margin: 4px;
-}
-.name{
-    height: 50px;
-    padding-top: 10px;
 }
