--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,220 +1,249 @@
-:root{
-    --red:#ed1c24;
-    --green:#28a745;
-    --white:#ffffff;
-    --black:#000000;
-    --grey:#96b3b3;
-    --bgrey:#0f0f0f;
+:root {
+  --red: #ed1c24;
+  --green: #28a745;
+  --white: #ffffff;
+  --black: #000000;
+  --grey: #96b3b3;
+  --bgrey: #0f0f0f;
 }
 /* background colors */
-.bg-red{
-    background-color: var(--red);
+.bg-red {
+  background-color: var(--red);
 }
-.bg-green{
-    background-color: var(--green);
+.bg-green {
+  background-color: var(--green);
 }
-.bg-white{
-    background-color: var(--white);
+.bg-white {
+  background-color: var(--white);
 }
-.bg-black{
-    background-color: var(--black);
+.bg-black {
+  background-color: var(--black);
 }
-.bg-grey{
-    background-color: var(--grey);
+.bg-grey {
+  background-color: var(--grey);
 }
-.bg-bgrey{
-    background-color: var(--bgrey);
+.bg-bgrey {
+  background-color: var(--bgrey);
 }
 /* text colors */
-.text-red{
-    color: var(--red);
+.text-red {
+  color: var(--red);
 }
-.text-green{
-    color: var(--green);
+.text-green {
+  color: var(--green);
 }
-.text-white{
-    color: var(--white);
+.text-white {
+  color: var(--white);
 }
-.text-black{
-    color: var(--black);
+.text-black {
+  color: var(--black);
 }
-.text-grey{
-    color: var(--grey);
+.text-grey {
+  color: var(--grey);
 }
-.text-bgrey{
-    color: var(--bgrey);
+.text-bgrey {
+  color: var(--bgrey);
 }
 
-.text-center{
-    text-align: center;
+.text-center {
+  text-align: center;
 }
-.text-none{
-    text-decoration: none;
+.text-none {
+  text-decoration: none;
 }
 
 /* display  */
-.d-inlineblock{
-    display: inline-block;
+.d-inlineblock {
+  display: inline-block;
 }
-.d-inline{
-    display: inline;
+.d-inline {
+  display: inline;
 }
-.d-block{
-    display: block;
+.d-block {
+  display: block;
 }
-.d-flex{
-    display: flex;
+.d-flex {
+  display: flex;
 }
-.flex-col{
-    flex-direction:column;
+.flex-col {
+  flex-direction: column;
 }
-.flex-colrev{
-    flex-direction: column-reverse;
+.flex-colrev {
+  flex-direction: column-reverse;
 }
-.flex-rowrev{
-    flex-direction: row-reverse;
+.flex-rowrev {
+  flex-direction: row-reverse;
 }
-.justify-center{
-    justify-content: center;
+.justify-center {
+  justify-content: center;
 }
-.justify-around{
-    justify-content: space-around;
+.justify-around {
+  justify-content: space-around;
 }
-.justify-between{
-    justify-content: space-between;
+.justify-between {
+  justify-content: space-between;
 }
-.justify-evenly{
-    justify-content: space-evenly;
+.justify-evenly {
+  justify-content: space-evenly;
 }
-.jusitfy-end{
-    justify-content: end;
+.jusitfy-end {
+  justify-content: end;
 }
-.align-center{
-    align-items: center;
+.align-center {
+  align-items: center;
 }
-.align-start{
-    align-items: start;
+.align-start {
+  align-items: start;
 }
-.align-end{
-    align-items: end;
+.align-end {
+  align-items: end;
 }
-.alignself-start{
-    align-self: flex-start;
+.alignself-start {
+  align-self: flex-start;
 }
-.flex-wrap{
-    flex-wrap: wrap;
+.flex-wrap {
+  flex-wrap: wrap;
 }
-.gap-1{
-    gap: 5px;
+.gap-1 {
+  gap: 5px;
 }
-.gap-2{
-    gap: 10px;
+.gap-2 {
+  gap: 10px;
 }
-.gap-3{
-    gap: 15px;
+.gap-3 {
+  gap: 15px;
 }
-.gap-4{
-    gap: 20px;
+.gap-4 {
+  gap: 20px;
 }
-.gap-5{
-    gap: 25px;
+.gap-5 {
+  gap: 25px;
 }
-.gap-6{
-    gap: 30px;
+.gap-6 {
+  gap: 30px;
 }
-.gap-7{
-    gap: 35px;
+.gap-7 {
+  gap: 35px;
 }
-.gap-8{
-    gap: 40px;
+.gap-8 {
+  gap: 40px;
 }
-.gap-9{
-    gap:80px;
+.gap-9 {
+  gap: 80px;
 }
-.m-1{
-    margin: 5px;
+.m-1 {
+  margin: 5px;
 }
-.m-2{
-    margin: 10px;
+.m-2 {
+  margin: 10px;
 }
-.m-3{
-    margin: 15px;
+.m-3 {
+  margin: 15px;
 }
-.m-4{
-    margin: 20px;
+.m-4 {
+  margin: 20px;
 }
-.m-5{
-    margin: 25px;
+.m-5 {
+  margin: 25px;
 }
-.mt-1{
-    margin-top: 10px;
+.mt-1 {
+  margin-top: 10px;
 }
-.mt-2{
-    margin-top: 15px;
+.mt-2 {
+  margin-top: 15px;
 }
-.mt-3{
-    margin-top: 20px;
+.mt-3 {
+  margin-top: 20px;
 }
-.mt-4{
-    margin-top: 30px;
+.mt-4 {
+  margin-top: 30px;
 }
-.mt-5{
-    margin-top: 40px;
+.mt-5 {
+  margin-top: 40px;
 }
-.mt-6{
-    margin-top: 50px;
+.mt-6 {
+  margin-top: 50px;
 }
-.mt-7{
-    margin-top: 60px;
+.mt-7 {
+  margin-top: 60px;
 }
-.mt-8{
-    margin-top: 70px;
+.mt-8 {
+  margin-top: 70px;
 }
-.mt-9{
-    margin-top: 80px;
+.mt-9 {
+  margin-top: 80px;
 }
-.m-auto{
-    margin: 0 auto;
+.ml-20 {
+  margin-left: 20px;
 }
-.p-1{
-    padding: 10px;
+.ml-70 {
+  margin-left: 70px;
 }
-.p-2{
-    padding: 15px;
+.ml-80 {
+  margin-left: 80px;
 }
-.p-3{
-    padding: 20px;
+.mr-20 {
+  margin-right: 20px;
 }
-.p-4{
-    padding: 25px;
+.mr-70 {
+  margin-right: 70px;
 }
-.p-5{
-    padding: 30px;
+.m-auto {
+  margin: 0 auto;
 }
-.pt-1{
-    padding-top: 10px;
+.p-1 {
+  padding: 10px;
 }
-.pt-2{
-    padding-top: 20px;
+.p-2 {
+  padding: 15px;
 }
-.pt-3{
-    padding-top: 30px;
+.p-3 {
+  padding: 20px;
 }
-.pt-4{
-    padding-top: 40px;
+.p-4 {
+  padding: 25px;
 }
-.pt-5{
-    padding-top: 50px;
+.p-5 {
+  padding: 30px;
 }
-.pos-ab{
-    position: absolute;
+.pt-1 {
+  padding-top: 10px;
 }
-.pos-start{
-    position:absolute;
-    
+.pt-2 {
+  padding-top: 20px;
 }
-.snp-pop{
-    font-family: Poppins;
-    font-weight: 500;
-    font-size: 2.5rem;
+.pt-3 {
+  padding-top: 30px;
+}
+.pt-4 {
+  padding-top: 40px;
+}
+.pt-5 {
+  padding-top: 50px;
+}
+.pt-6 {
+  padding-top: 60px;
+}
+.pt-7 {
+  padding-top: 70px;
+}
+.pb-1{
+    padding-bottom: 10px;
+}
+.pb-2{
+    padding-bottom: 20px;
+}
+.pos-ab {
+  position: absolute;
+}
+.pos-start {
+  position: absolute;
+}
+.snp-pop {
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 2.5rem;
+}
+.fontsize-three {
+  font-size: 3.2rem;
 }
