Salt n Pepper has been Completed

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -3,7 +3,7 @@
   --green: #28a745;
   --white: #ffffff;
   --black: #000000;
-  --grey: #96b3b3;
+  --grey: #b7b7b7;
   --bgrey: #0f0f0f;
 }
 /* background colors */
